Fix spacing in intro

--- a/less/profile.less
+++ b/less/profile.less
@@ -133,7 +133,7 @@ a {
     display: table;
     width: 100%;
     height: auto;
-    padding: 100px 0;
+    padding: 200px 0;
     text-align: center;
     color: white;
     background: url(../img/big_cloud.jpg) no-repeat bottom center scroll;
@@ -153,8 +153,6 @@ a {
         }
     }
     @media(min-width:768px) {
-        height: 100%;
-        padding: 0;
         .intro-body {
             .brand-heading {
                 font-size: 70px;
